类型注意问题

--- a/sgg/06_Vue3-类型注解的解释.md
+++ b/sgg/06_Vue3-类型注解的解释.md
@@ -1,1 +1,36 @@
-# 06_Vue3-类型注解的解释.
+
+## [#](https://24kcs.github.io/vue3_study/chapter1/03_HelloWorld.html#类型注解)类型注解
+
+接下来让我们看看 TypeScript 工具带来的高级功能。 给 `person` 函数的参数添加 `: string` 类型注解，如下：
+
+```typescript
+function greeter (person: string) {
+  return 'Hello, ' + person
+}
+
+let user = 'Yee'
+
+console.log(greeter(user))
+```
+
+TypeScript 里的类型注解是一种轻量级的为函数或变量添加约束的方式。 在这个例子里，我们希望 `greeter` 函数接收一个字符串参数。 然后尝试把 `greeter` 的调用改成传入一个数组：
+
+```typescript
+function greeter (person: string) {
+  return 'Hello, ' + person
+}
+
+let user = [0, 1, 2]
+
+console.log(greeter(user))
+```
+
+重新编译，你会看到产生了一个错误：
+
+```text
+error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'string'.
+```
+
+类似地，尝试删除 `greeter` 调用的所有参数。 TypeScript 会告诉你使用了非期望个数的参数调用了这个函数。 在这两种情况中，TypeScript提供了静态的代码分析，它可以分析代码结构和提供的类型注解。
+
+要注意的是尽管有错误，`greeter.js` 文件还是被创建了。 就算你的代码里有错误，你仍然可以使用 TypeScript。但在这种情况下，TypeScript 会警告你代码可能不会按预期执行。
