--- a/sgg/07_Vue3-接口的演示.md
+++ b/sgg/07_Vue3-接口的演示.md
@@ -1,1 +1,22 @@
-# 07_Vue3-接口的演示.
+
+## [#](https://24kcs.github.io/vue3_study/chapter1/03_HelloWorld.html#接口)接口
+
+让我们继续扩展这个示例应用。这里我们使用接口来描述一个拥有 `firstName` 和 `lastName` 字段的对象。 在 `TypeScript` 里，只在两个类型内部的结构兼容，那么这两个类型就是兼容的。 这就允许我们在实现接口时候只要保证包含了接口要求的结构就可以，而不必明确地使用 `implements` 语句。
+
+```typescript
+interface Person {
+  firstName: string
+  lastName: string
+}
+
+function greeter (person: Person) {
+  return 'Hello, ' + person.firstName + ' ' + person.lastName
+}
+
+let user = {
+  firstName: 'Yee',
+  lastName: 'Huang'
+}
+
+console.log(greeter(user))
+```
