--- a/sgg/08_Vue3-类的演示.md
+++ b/sgg/08_Vue3-类的演示.md
@@ -1,1 +1,41 @@
-# 08_Vue3-类的演示.
+
+## [#](https://24kcs.github.io/vue3_study/chapter1/03_HelloWorld.html#类)类
+
+最后，让我们使用类来改写这个例子。 TypeScript 支持 JavaScript 的新特性，比如支持基于类的面向对象编程。
+
+让我们创建一个 `User` 类，它带有一个构造函数和一些公共字段。因为类的字段包含了接口所需要的字段，所以他们能很好的兼容。
+
+还要注意的是，我在类的声明上会注明所有的成员变量，这样比较一目了然。
+
+```typescript
+class User {
+  fullName: string
+  firstName: string
+  lastName: string
+
+  constructor (firstName: string, lastName: string) {
+    this.firstName = firstName
+    this.lastName = lastName
+    this.fullName = firstName + ' ' + lastName
+  }
+}
+
+interface Person {
+  firstName: string
+  lastName: string
+}
+
+function greeter (person: Person) {
+  return 'Hello, ' + person.firstName + ' ' + person.lastName
+}
+
+let user = new User('Yee', 'Huang')
+
+console.log(greeter(user))
+```
+
+重新运行 `tsc greeter.ts`，你会看到 TypeScript 里的类只是一个语法糖，本质上还是 `JavaScript` 函数的实现。
+
+## [#](https://24kcs.github.io/vue3_study/chapter1/03_HelloWorld.html#总结)总结
+
+到这里，你已经对 TypeScript 有了一个大致的印象，那么下一章让我们来一起学习 TypeScript 的一些常用语法吧。
