--- a/sgg/14_Vue3-基础类型之枚举.md
+++ b/sgg/14_Vue3-基础类型之枚举.md
@@ -1,1 +1,41 @@
-# 14_Vue3-基础类型之枚举.
+
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#枚举)枚举
+
+`enum` 类型是对 JavaScript 标准数据类型的一个补充。 使用枚举类型可以`为一组数值赋予友好的名字`。
+
+```typescript
+enum Color {
+  Red,
+  Green,
+  Blue
+}
+
+// 枚举数值默认从0开始依次递增
+// 根据特定的名称得到对应的枚举数值
+let myColor: Color = Color.Green  // 0
+console.log(myColor, Color.Red, Color.Blue)
+```
+
+默认情况下，从 `0` 开始为元素编号。 你也可以手动的指定成员的数值。 例如，我们将上面的例子改成从 `1` 开始编号：
+
+```typescript
+enum Color {Red = 1, Green, Blue}
+let c: Color = Color.Green
+```
+
+或者，全部都采用手动赋值：
+
+```typescript
+enum Color {Red = 1, Green = 2, Blue = 4}
+let c: Color = Color.Green
+```
+
+枚举类型提供的一个便利是你可以由枚举的值得到它的名字。 例如，我们知道数值为 2，但是不确定它映射到 Color 里的哪个名字，我们可以查找相应的名字：
+
+```typescript
+enum Color {Red = 1, Green, Blue}
+let colorName: string = Color[2]
+
+console.log(colorName)  // 'Green'
+```
