--- a/sgg/17_Vue3-基础类型之联合类型和类型断言及类型推断.md
+++ b/sgg/17_Vue3-基础类型之联合类型和类型断言及类型推断.md
@@ -1,1 +1,67 @@
-# 17_Vue3-基础类型之联合类型和类型断言及类型推断.
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#联合类型)联合类型
+
+联合类型（Union Types）表示取值可以为多种类型中的一种
+需求1: 定义一个一个函数得到一个数字或字符串值的字符串形式值
+
+```typescript
+function toString2(x: number | string) : string {
+  return x.toString()
+}
+```
+
+需求2: 定义一个一个函数得到一个数字或字符串值的长度
+
+```typescript
+function getLength(x: number | string) {
+
+  // return x.length // error
+
+  if (x.length) { // error
+    return x.length
+  } else {
+    return x.toString().length
+  }
+}
+```
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#类型断言)类型断言
+
+通过类型断言这种方式可以告诉编译器，“相信我，我知道自己在干什么”。 类型断言好比其它语言里的类型转换，但是不进行特殊的数据检查和解构。 它没有运行时的影响，只是在编译阶段起作用。 TypeScript 会假设你，程序员，已经进行了必须的检查。
+
+类型断言有两种形式。 其一是“尖括号”语法, 另一个为 `as` 语法
+
+```typescript
+/* 
+类型断言(Type Assertion): 可以用来手动指定一个值的类型
+语法:
+    方式一: <类型>值
+    方式二: 值 as 类型  tsx中只能用这种方式
+*/
+
+/* 需求: 定义一个函数得到一个字符串或者数值数据的长度 */
+function getLength(x: number | string) {
+  if ((<string>x).length) {
+    return (x as string).length
+  } else {
+    return x.toString().length
+  }
+}
+console.log(getLength('abcd'), getLength(1234))
+```
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#类型推断)类型推断
+
+类型推断: TS会在没有明确的指定类型的时候推测出一个类型
+有下面2种情况: 1. 定义变量时赋值了, 推断为对应的类型. 2. 定义变量时没有赋值, 推断为any类型
+
+```typescript
+/* 定义变量时赋值了, 推断为对应的类型 */
+let b9 = 123 // number
+// b9 = 'abc' // error
+
+/* 定义变量时没有赋值, 推断为any类型 */
+let b10  // any类型
+b10 = 123
+b10 = 'abc'
+```.
