--- a/sgg/10_Vue3-基础类型之布尔_数字_字符串.md
+++ b/sgg/10_Vue3-基础类型之布尔_数字_字符串.md
@@ -1,1 +1,37 @@
-# 10_Vue3-基础类型之布尔_数字_字符串.
+
+# [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#_1-基础类型)1. 基础类型
+
+TypeScript 支持与 JavaScript 几乎相同的数据类型，此外还提供了实用的枚举类型方便我们使用。
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#布尔值)布尔值
+
+最基本的数据类型就是简单的 true/false 值，在JavaScript 和 TypeScript 里叫做 `boolean`（其它语言中也一样）。
+
+```typescript
+let isDone: boolean = false;
+isDone = true;
+// isDone = 2 // error
+```
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#数字)数字
+
+和 JavaScript 一样，TypeScript 里的所有数字都是浮点数。 这些浮点数的类型是 number。 除了支持十进制和十六进制字面量，TypeScript 还支持 ECMAScript 2015中引入的二进制和八进制字面量。
+
+```typescript
+let a1: number = 10 // 十进制
+let a2: number = 0b1010  // 二进制
+let a3: number = 0o12 // 八进制
+let a4: number = 0xa // 十六进制
+```
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#字符串)字符串
+
+JavaScript 程序的另一项基本操作是处理网页或服务器端的文本数据。 像其它语言里一样，我们使用 `string` 表示文本数据类型。 和 JavaScript 一样，可以使用双引号（`"`）或单引号（`'`）表示字符串。
+
+```typescript
+let name:string = 'tom'
+name = 'jack'
+// name = 12 // error
+let age:number = 12
+const info = `My name is ${name}, I am ${age} years old!`
+```
