--- a/sgg/13_Vue3-基础类型之数组和元组.md
+++ b/sgg/13_Vue3-基础类型之数组和元组.md
@@ -1,1 +1,32 @@
-# 13_Vue3-基础类型之数组和元组.
+# 13_Vue3-基础类型之数组和元组
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#数组)数组
+
+TypeScript 像 JavaScript 一样可以操作数组元素。 有两种方式可以定义数组。 第一种，可以在`元素类型后面接上[]`，表示由此类型元素组成的一个数组：
+
+```typescript
+let list1: number[] = [1, 2, 3]
+```
+
+第二种方式是使用数组泛型，`Array<元素类型>`：
+
+```typescript
+let list2: Array<number> = [1, 2, 3]
+```
+
+## [#](https://24kcs.github.io/vue3_study/chapter2/1_type.html#元组-tuple)元组 Tuple
+
+元组类型允许表示一个已知元素数量和类型的数组，`各元素的类型不必相同`。 比如，你可以定义一对值分别为 `string` 和 `number` 类型的元组。
+
+```typescript
+let t1: [string, number]
+t1 = ['hello', 10] // OK
+t1 = [10, 'hello'] // Error
+```
+
+当访问一个已知索引的元素，会得到正确的类型：
+
+```typescript
+console.log(t1[0].substring(1)) // OK
+console.log(t1[1].substring(1)) // Error, 'number' 不存在 'substring' 方法
+```
+
