--- a/sgg/84_Vue3-面试题简述.md
+++ b/sgg/84_Vue3-面试题简述.md
@@ -1,1 +1,35 @@
 # 84_Vue3-面试题简述.
+
+## node-sass 安装失败问题
+
+在`package.json`中
+```js
+  "dependencies": {
+    "sass": "^1.34.0",
+}
+```
+
+
+```shell
+yarn install
+yarn serve
+```
+
+
+## 解决eslint格式报错问题
+在`package.json`中
+
+```js
+"eslintConfig": {
+    "rules": {
+      "generator-star-spacing": "off"
+    }
+  },
+```
+
+## vue-markdown-editor
+
+
+http://ckang1229.gitee.io/vue-markdown-editor/
+
+
